flex nowrap webring item fix

--- a/style.css
+++ b/style.css
@@ -176,6 +176,8 @@ li {
 .contact-row {
   display: flex;
   align-items: center;
+  gap: 30px;
+  flex-wrap: nowrap;
 }
 .webring {
   margin-left: auto;
